# Prj3_Equinox_FX_Brighton1Pylib

./: .editorconfig  .envpypath  .gitattributes  .gitignore  EquinoxMetaq.code-workspace  Equinoxicm.code-workspace  NeuroPredict2.py  PythonLib.code-workspace  foo  mqlpip.txt  piprep.json  plog  prjWSL.code-workspace  pyvenv.cfg  requirements.txt  reqwin1  tsEquinox1Meta.code-profile.exp.code-profile
hybrid_ensemble_tuning/hybrid_ensemble_model/: oracle.json
keras_tuner_dir/forex_price_forecasting/: oracle.json
my_dir/helloworld/: oracle.json
my_dir/intro_to_kt/: oracle.json
tsConfigData/: configfile.py
tsEquinox1-env/: PythonLib.code-workspace-tsequin1.code-workspace  pyvenv.cfg
tsEquinox1-env/Scripts/: activate  (+2 more)
tsModelData/: ## Copilot.md
tsProjects/: # Initialize the tuner class.py  samplemodel.py  tsMqlDataProcess1.py  tsMqlDataProcessbase.py  tsMqlMLTune.py  tsMqlMLTune0.py  tsMqlMLTunechatgpt.py
tsPyPackages/tsMqlML/: pyproject.toml  setup.py  tsMqlML.py  tsMqlML1.py
tsPyPackages/tsMqlML/my_dir/intro_to_kt/: oracle.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0000/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0001/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0002/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0003/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0004/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0005/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0006/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0007/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0008/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0009/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0010/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0011/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0012/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0013/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0014/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0015/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0016/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0017/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0018/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0019/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0020/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0021/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0022/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0023/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0024/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0025/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0026/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0027/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0028/: trial.json
tsPyPackages/tsMqlML/my_dir/intro_to_kt/trial_0029/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlML/tsMqlML.py.egg-info/: SOURCES.txt  top_level.txt
tsPyPackages/tsMqlMLTune/: pyproject.toml  tsMqlMLTune.py  tsMqlMLTuner.py
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/: oracle.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_00/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_01/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_02/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_03/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_04/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_05/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_06/: trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_07/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_08/: checkpoint.weights.h5  trial.json
tsPyPackages/tsMqlMLTune/hybrid_ensemble_tuning/hybrid_ensemble_model/trial_09/: trial.json
tsPyPackages/tsMqlMLTune/tsMqlMLTune.py.egg-info/: SOURCES.txt  top_level.txt
tsPyPackages/tsMqlOverrides/: pyproject.toml
tsPyPackages/tsMqlOverrides/src/tsMqlOverrides/: __init__.py  config.py  config.yaml  setoverride_params.py
tsPyPackages/tsMqlPlatform/: config.py  pyproject.toml
tsPyPackages/tsMqlPlatform/src/tsMqlPlatform/: __init__.py  config.json  config.py  config.yaml  logger.py  platform_checker.py  platform_helper.py  run_platform.py
tsPyPackages/tsMqlReference/: pyproject.toml  tsMqlReference.py
(+851 files in other folders)
